gcc/testsuite/rust/rustc/ui/infinite/issue-41731-infinite-macro-print_dg.rs
//@ compile-flags: -Z trace-macros

#![recursion_limit = "5"]

fn main() {
    macro_rules! stack {
        ($overflow:expr) => {
            print!(stack!($overflow));
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
        };
    }

    stack!("overflow");
}

